# huffman_encryption

./: CMakeLists.txt  README.md  main.c
bits_io/: iobits.c  iobits.h
data_structure/: datastructure.c  datastructure.h  treebuilder.c  treebuilder.h
decoding/: decode.c  decode.h
encoding/: encode.c  encode.h
